Interesting: the checksum of two README happens to be zero!

--- a/xv6/Makefile
+++ b/xv6/Makefile
@@ -176,8 +176,8 @@ UPROGS=\
 	_makebig\
 	_idup\
 
-fs.img: mkfs README $(UPROGS) make3file
-	./mkfs fs.img README $(UPROGS) make3file
+fs.img: mkfs README $(UPROGS) catmakefile 
+	./mkfs fs.img README $(UPROGS) catmakefile
 
 -include *.d
 
